# jetson-nano-practice

./: README.md
humanoid_segmentation_sdk/: CMakeLists.txt  README.md  conanfile.txt
humanoid_segmentation_sdk/cmake/: opencv.cmake
humanoid_segmentation_sdk/doc/: conan_2_cheatsheet.md  conan_setup.md  tensor.rt_install.md
humanoid_segmentation_sdk/include/segmentation/: SegmentationResult.hpp  Segmenter.hpp  TRTResNetSegmenter.hpp
humanoid_segmentation_sdk/scripts/python-prototype/: image_classify.py  requirements.txt
humanoid_segmentation_sdk/src/segmentation/: TRTResNetSegmenter.cpp  cuda_kernels.cu
humanoid_segmentation_sdk/tests/samples/: CMakeLists.txt  auto_policy_dispatch.cu  stl_with_cuda.cu  unified_transform.cu  vector_add.cu  zip_iterator_get0.cu
inventory-abstraction/: README.md  barcode_reader.py  data_augementation.py  requirements-barcode.txt  requirements.txt  shelf_inventory.py
